--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name local.docaid;
+    server_name 160.191.162.97;
 
     index index.php index.html;
     root /var/www/html/public;
