--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name local.docaid;
+    server_name localhost; 
 
     index index.php index.html;
     root /var/www/html/public;
